k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cda-${CI_PROJECT_NAME}
  namespace: ${NAMESPACE}
  labels:
    ApplicationName: cda-${CI_PROJECT_NAME}
    enviroment: ${CI_ENVIRONMENT_NAME}
    app: cda-${CI_PROJECT_NAME}
spec:
  ports:
    - port: ${APP_PORT}
      protocol: TCP
      targetPort: ${APP_PORT}
  selector:
    app: cda-${CI_PROJECT_NAME}
  type: ClusterIP
